<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.unice.polytech.isa.dd</groupId>
    <artifactId>projet-isa-devops-20-team-d-20</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>j2e/CustomerRegisterComponent</module>
        <module>j2e/Entities</module>
        <module>j2e/DeliveryComponent</module>
        <module>j2e/BillingComponent</module>
        <module>client/Cli-CustomerService</module>
        <module>j2e/DeliveryWebService</module>
        <module>j2e/BillingWebService</module>
        <module>j2e/Web</module>
      <module>j2e/PlanningComponent</module>
      <module>j2e/PlanningWebService</module>
      <module>j2e/CustomerRegisterWebService</module>
        <module>j2e/DroneManagemmentComponent</module>
        <module>j2e/PlanningComponent</module>
        <module>j2e/PlanningWebService</module>
        <module>j2e/CustomerRegisterWebService</module>
        <module>client/Cli-Clissandre</module>
        <module>j2e/ProviderRegisterComponent</module>
        <module>j2e/ProviderRegisterWebService</module>
        <module>j2e/PackageRegisterComponent</module>
        <module>j2e/PackageRegisterWebService</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- General Properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <versions.maven.compiler>3.6.1</versions.maven.compiler>
        <versions.json>20160810</versions.json>
        <versions.java>1.8</versions.java>
        <!-- J2E 7.x technological stack -->
        <versions.javaee>7.0-1</versions.javaee>
        <versions.openejb>7.0.2</versions.openejb>
        <versions.tomee>7.0.2</versions.tomee>
        <versions.openjpa>2.4.1</versions.openjpa>
        <versions.myface>2.2.10</versions.myface>
        <!-- Testing dependencies -->
        <versions.maven.surefire>2.19.1</versions.maven.surefire>
        <versions.junit>4.12</versions.junit>
        <versions.mockito>1.10.19</versions.mockito>
        <versions.cukespace>1.6.5</versions.cukespace>
        <versions.arquillian.junit>1.1.12.Final</versions.arquillian.junit>
        <versions.arquilian.jta>1.0.3.Final</versions.arquilian.jta>
        <versions.shrinkwrap>2.2.6</versions.shrinkwrap>

        <versions.java>1.8</versions.java>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${versions.json}</version>
        </dependency>
        <!-- Dependencies for the OpenEJB framework (provided at runtime by the app server) -->
        <!-- Dependency to integrate REST clients (order matters for CXF) (provided) -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf-rs</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependencies for the JSF framework (provided)-->
        <dependency>
            <groupId>org.apache.myfaces.core</groupId>
            <artifactId>myfaces-api</artifactId>
            <version>${versions.myface}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) (tests only) -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${versions.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${versions.mockito}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cukespace</groupId>
            <artifactId>cukespace-core</artifactId>
            <version>${versions.cukespace}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>${versions.arquillian.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-depchain</artifactId>
            <version>${versions.shrinkwrap}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>arquillian-tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${versions.javaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-core</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-rs-client</artifactId>
            <version>3.1.8</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>


    <distributionManagement>
        <repository>
            <id>central</id>
            <name>team-d-releases</name>
            <url>http://teamd-isadevops.francecentral.cloudapp.azure.com:8081/artifactory/libs-release-local</url>
            <!--<url>http://localhost:8081/artifactory/libs-release-local</url>-->

        </repository>

        <snapshotRepository>
            <id>snapshots</id>
            <name>team-d-snapshots</name>
            <url>http://teamd-isadevops.francecentral.cloudapp.azure.com:8081/artifactory/libs-snapshot-local</url>
            <!--<url>http://localhost:8081/artifactory/libs-snapshot-local</url>-->
        </snapshotRepository>
    </distributionManagement>

    <!--<build>-->
        <!--<finalName>DroneDelivery</finalName>-->
        <!--<pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;-->
            <!--<plugins>-->
                <!--<plugin>-->
                    <!--<groupId>org.apache.tomee.maven</groupId>-->
                    <!--<artifactId>tomee-maven-plugin</artifactId>-->
                    <!--<version>${versions.tomee}</version>-->
                    <!--<configuration>-->
                        <!--&lt;!&ndash; From TomEE to TomEE+ to support the web services stack &ndash;&gt;-->
                        <!--<tomeeClassifier>plus</tomeeClassifier>-->
                        <!--<args>-Xmx512m -XX:PermSize=256m</args>-->
                        <!--<deployOpenEjbApplication>true</deployOpenEjbApplication>-->
                    <!--</configuration>-->
                <!--</plugin>-->
            <!--</plugins>-->
        <!--</pluginManagement>-->
    <!--</build>-->

</project>